feat: add support for resource indicator
Currently only supported for the token-endpoint.
Should be fairly easy to add to token exchange endpoint in the future,
if needed.

Also reword some docstring comments for clarification.
